{
  "Todo":{

    "login":{
      "frontend": "done",
      "backend": "done"
    },
    "signup":{
      "frontend": "done",
      "backend": ["done", "password encryption"]
    },
    "pizzas":{
      "frontend":"done",
      "backend": ["almostDone","database model", "create pizza"]
    },
    "deals":{
      "frontend":"done",
      "backend": ["almostDone","database model"]
    },
    "order":{
      "frontend":"done",
      "backend": ["not started","database model"]
    },
    "new order":{
      "frontend":"done",
      "backend": ["almost done","database model", "create pizza"]
    },
    "Database model":"Done",
    "micro service": "not started"
  },

  "database design":{
    "users":{
      "email":"String",
      "password": "hashPassword"
    },
    "pizza":{
      "id":"Number",
      "title":"String",
      "description": {},

      "price":"Number",
      "type": [0,1],
      "status":"String",
      "email":"String"
    },
    "ingredients":{
      "crust":[],
      "sauce":[],
      "toppings":[],
      "cheese":[]
    },
    "orders":[]

  }
}
